[package]
name = "zugzug-sys"
version = "0.1.0"
authors = ["Jason Hills <jason.hills@vivint.com>"]
edition = "2018"
links = "pubnub_callback"

[dependencies]

[build-dependencies]
bindgen = "*"
fs_extra = "1.1"
regex = "1.1.2"
ruplacer = "0.4.1"

[features]
static = []
dynamic = []
sync = []
callback = []
